@@ -21,7 +21,7 @@ class TestShellEscape(TestCase):
         self.assertEqual("'  '", shell_escape("  "))
 
     def test_single_quotes(self):
-        self.assertEqual("'shell'\\''s great'", shell_escape("shell's great"))
+        self.assertEqual("'shell'\"'\"'s great'", shell_escape("shell's great"))
 
 
 class TestGetArchBits(TestCase):
